tests/src/frontend/typechecking/exhaustiveness/invalid/type_alias_recursive.sk
base class Expr {
  children =
  | Plus(Expr, Expr)
  | Value(Int)
}
class Test() {
  type Foo = Plus;

  fun bar(x: Expr): Int {
    x match {
    | this::Foo(_, Value(1)) -> 0
    | Value(_) -> 1
    }
  }
}
